--- a/css/jobs.css
+++ b/css/jobs.css
@@ -26,7 +26,7 @@
     padding-bottom: 8px;
 }
 .form{
-    width: 40%;
+    width: 30%;
     /* border: 3px solid red; */
 }
 
@@ -50,6 +50,10 @@
     padding:0 20px;
     border: 1px solid #00000020;
 }
+.form-wrapper p{
+    margin: 0;
+    text-align: center;
+}
 .form-wrapper p a{
     text-decoration: none;
     color: #4fa6d5;
@@ -62,9 +66,15 @@
 
 .form-wrapper img{
     max-width: 100%;
+    /* max-height: 50%; */
 }
 .form-wrapper label{
     font-size: 16px;
+}
+.form-wrapper .or{
+    color: #999;
+    text-align: center;
+    margin: 5px 0;
 }
 .form-wrapper span{
     color: #ff0000;
@@ -130,6 +140,7 @@ input[type="submit"]{
     background-color: #0961c9;
     color: #fff;
     font-size: 14px;
+    border-radius: 5px;
 }
 input[type="submit"]:hover{
     background-color: #06438c;
@@ -140,8 +151,42 @@ input[type="submit"]:hover{
 .section-title{
     padding-bottom: 0;
 }
+.share{
+    margin: 20px 0;
+    text-align: center;
+}
+.frames{
+    margin: 10px 0;
+    display: inline-flex;
+}
+.a2a_kit{
+    padding: 0;
+    margin: 0 20px 0 0;
+}
+/* #fbFrame{
+    padding: 10px 0 10px 50px;
+}
+#twitterFrame{
+    padding: 10px 0;
+} */
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 1156px){
+    .frames{
+        max-width: 100%;
+        /* display: block; */
+    }
+    #fbFrame, .a2a_kit{
+        margin: 5px 0;
+        width: 33%;
+        padding: 0;
+    }
+    #twitterFrame{
+        float: left;
+        margin: 5px 0;
+    }
+}
+
+@media only screen and (max-width: 912px){
     .section-title{
         padding: 0;
     }
@@ -164,5 +209,33 @@ input[type="submit"]:hover{
     .form{
         width: 100%;
         margin: 30px 0;
+    }
+    .frames{
+        max-width: 100%;
+        display: inline-flex;
+    }
+    #fbFrame, .a2a_kit{
+        margin: 5px 0;
+        width: 33%;
+        padding: 0;
+    }
+    #twitterFrame{
+        float: left;
+        margin: 5px 0;
+    }
+}
+@media only screen and (max-width: 430px){
+    .frames{
+        max-width: 100%;
+        /* display: block; */
+    }
+    #fbFrame, .a2a_kit{
+        margin: 5px 0;
+        width: 33%;
+        padding: 0;
+    }
+    #twitterFrame{
+        float: left;
+        margin: 5px 0;
     }
 }
